--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/register.css">
+    <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -13,10 +13,10 @@
         <main>
             <div class="container">
               <div class="row">
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 col-sm-8">
                   <div class="leftDiv">
                     <p class="bigText">Become a</p>
-                    <h6 style="color: orange;font-size: xxx-large;margin: 0;">BoschOverflow</h6>
+                    <h6 style="color: #ff7B00;font-size: xxx-large;margin: 0;">BoschOverflow</h6>
                     <p class="bigText">student</p>
                     <p style="font-size: x-large; color: #FFFFFF;">Free to use, easy to love</p>
                     <ul class="list-group list-group-flush">
@@ -30,26 +30,31 @@
                     </ul>
                   </div>
                 </div>
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 col-sm-8">
                   <div class="rightDiv">
                     <form>
                       <p style="font-size: x-large; margin-bottom: 10%;">Sign up</p>
-                      <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                      <div class="mb-3">
+                        <label for="username" class="form-label">EDV</label>
+                        <input type="text" id="username" class="form-control" placeholder="edv" aria-label="Username" aria-describedby="basic-addon1">
                       </div>
                       <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="email">
+                        <label for="username" class="form-label">Username</label>
+                        <input type="text" id="username" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
                       </div>
                       <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="your password">
+                        <label for="userEmail" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp" placeholder="email">
                       </div>
                       <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword2" placeholder="your password">
+                        <label for="userPass" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="userPass" placeholder="your password">
                       </div>
-                      <a href="inicio.html" style="background-color: #04AA6D; color: #FFFFFF; margin-bottom: 10%;" type="submit" class="btn">Register</a>
+                      <div class="mb-3">
+                        <label for="repeatedUserPass" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="repeatedUserPass" placeholder="repeat your password">
+                      </div>
+                      <a href="inicio.html" style="background-color: #ff7B00; color: #FFFFFF; margin-bottom: 10%;" type="submit" class="btn">Register</a>
                     </form>
                   </div>
                 </div>
