--- a/inicio.html
+++ b/inicio.html
@@ -4,10 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward_ios,delete,edit_square" />
     <link rel="stylesheet" href="css/inicio.css">
     <title>Página Inicial</title>
 </head>
 <body>
+  <div class="modal" tabindex="-1" id="modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Add space</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <div class="mb-3">
+                <label class="form-label">Name</label>
+                <input class="form-control" type="text" placeholder="Space name...">
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal" tabindex="-1" id="modaldelete">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Delete</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <h5>Are you sure you want to delete this space?</h5>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Delete</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
             <a href="inicio.html">
@@ -24,83 +64,87 @@
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
-
+        
+        <div class="q">
+          <h1 style="font-size: 24px; margin-bottom: 1%;">Spaces</h1>
+          <a href="./participants.html" class="btn btn-outline-success p" type="submit"  data-bs-toggle="modal" data-bs-target="#modal">Add space</a>
+        </div>
         <div class="cards">
             <div class="card" style="width: 22rem;">
                 <img src="https://www.wearebosch.com/img/globe.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                 <h5 class="card-title">My space</h5>
-                  <a href="space.html" class="btn btn-primary">See more</a>
+                  <div style="display: flex; flex-direction: row; justify-content: space-between;"><a href="space.html" class="btn btn-primary">See more</a><span class="material-symbols-outlined" data-bs-toggle="modal" data-bs-target="#modaldelete">delete</span></div>
                 </div>
             </div>
             <div class="card" style="width: 22rem;">
                 <img src="https://www.wearebosch.com/img/globe.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                 <h5 class="card-title">My second space</h5>
-                  <a href="space.html" class="btn btn-primary">See more</a>
+                  <div style="display: flex; flex-direction: row; justify-content: space-between;"><a href="space.html" class="btn btn-primary">See more</a><span class="material-symbols-outlined" data-bs-toggle="modal" data-bs-target="#modaldelete">delete</span></div>
                 </div>
             </div>
             <div class="card" style="width: 22rem;">
                 <img src="https://www.wearebosch.com/img/globe.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                 <h5 class="card-title">My real space</h5>
-                  <a href="space.html" class="btn btn-primary">See more</a>
+                  <div style="display: flex; flex-direction: row; justify-content: space-between;"><a href="space.html" class="btn btn-primary">See more</a><span class="material-symbols-outlined" data-bs-toggle="modal" data-bs-target="#modaldelete">delete</span></div>
                 </div>
             </div>
             <div class="card" style="width: 22rem;">
                 <img src="https://www.wearebosch.com/img/globe.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                 <h5 class="card-title">The space</h5>
-                  <a href="space.html" class="btn btn-primary">See more</a>
+                  <div style="display: flex; flex-direction: row; justify-content: space-between;"><a href="space.html" class="btn btn-primary">See more</a><span class="material-symbols-outlined" data-bs-toggle="modal" data-bs-target="#modaldelete">delete</span></div>
                 </div>
             </div>
             <div class="card" style="width: 22rem;">
                 <img src="https://www.wearebosch.com/img/globe.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                 <h5 class="card-title">Girls space</h5>
-                  <a href="space.html" class="btn btn-primary">See more</a>
+                  <div style="display: flex; flex-direction: row; justify-content: space-between;"><a href="space.html" class="btn btn-primary">See more</a><span class="material-symbols-outlined" data-bs-toggle="modal" data-bs-target="#modaldelete">delete</span></div>
                 </div>
             </div>
             <div class="card" style="width: 22rem;">
                 <img src="https://www.wearebosch.com/img/globe.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                 <h5 class="card-title">Girls space</h5>
-                  <a href="space.html" class="btn btn-primary">See more</a>
+                  <div style="display: flex; flex-direction: row; justify-content: space-between;"><a href="space.html" class="btn btn-primary">See more</a><span class="material-symbols-outlined" data-bs-toggle="modal" data-bs-target="#modaldelete">delete</span></div>
                 </div>
             </div>
             <div class="card" style="width: 22rem;">
                 <img src="https://www.wearebosch.com/img/globe.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                 <h5 class="card-title">Girls space</h5>
-                  <a href="space.html" class="btn btn-primary">See more</a>
+                  <div style="display: flex; flex-direction: row; justify-content: space-between;"><a href="space.html" class="btn btn-primary">See more</a><span class="material-symbols-outlined" data-bs-toggle="modal" data-bs-target="#modaldelete">delete</span></div>
                 </div>
             </div>
             <div class="card" style="width: 22rem;">
                 <img src="https://www.wearebosch.com/img/globe.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                 <h5 class="card-title">Girls space</h5>
-                  <a href="space.html" class="btn btn-primary">See more</a>
+                  <div style="display: flex; flex-direction: row; justify-content: space-between;"><a href="space.html" class="btn btn-primary">See more</a><span class="material-symbols-outlined" data-bs-toggle="modal" data-bs-target="#modaldelete">delete</span></div>
                 </div>
             </div>
             <div class="card" style="width: 22rem;">
                 <img src="https://www.wearebosch.com/img/globe.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                 <h5 class="card-title">Girls space</h5>
-                  <a href="space.html" class="btn btn-primary">See more</a>
+                  <div style="display: flex; flex-direction: row; justify-content: space-between;"><a href="space.html" class="btn btn-primary">See more</a><span class="material-symbols-outlined" data-bs-toggle="modal" data-bs-target="#modaldelete">delete</span></div>
                 </div>
             </div>
             <div class="card" style="width: 22rem;">
                 <img src="https://www.wearebosch.com/img/globe.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                 <h5 class="card-title">Girls space</h5>
-                  <a href="space.html" class="btn btn-primary">See more</a>
+                  <div style="display: flex; flex-direction: row; justify-content: space-between;"><a href="space.html" class="btn btn-primary">See more</a><span class="material-symbols-outlined" data-bs-toggle="modal" data-bs-target="#modaldelete">delete</span></div>
                 </div>
             </div>
             <div class="card" style="width: 22rem;">
                 <img src="https://www.wearebosch.com/img/globe.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                 <h5 class="card-title">Girls space</h5>
-                  <a href="space.html" class="btn btn-primary">See more</a>
+                  <div style="display: flex; flex-direction: row; justify-content: space-between;"><a href="space.html" class="btn btn-primary">See more</a><span class="material-symbols-outlined" data-bs-toggle="modal" data-bs-target="#modaldelete">delete</span></div>
                 </div>
             </div>
         </div>
